# ruanjianchuangxin-1

./: .eslintignore  .eslintrc.js  .gitignore  AIColorTuning.tsx  App.tsx  ColorGradingEngine.ts  ColorGradingView.tsx  ColorOverlay.tsx  ColorProfile.ts  GPU_ARCHITECTURE.md  ImageProcessingService.ts  ImageTo3DService.ts  NLPService.ts  README.md  SiliconFlowService.ts  ThreeDModeling.shared.ts  ThreeDModeling.tsx  ThreeDModelingSession.ts  ThreeDModelingView.tsx  agent_tab_dump.xml  apiClient.ts  apiConfig.ts  app.json  babel.config.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tailwind.design.config.js  tsconfig.json  ui.xml
.bundle/: auth-only-server.js
.trae/documents/: 图片上传与预览功能计划.md
__tests__/: App.test.tsx  ThreeDModeling.test.tsx  apiConfig.test.ts
__tests__/agent/: authPromptStore.test.ts  localPlanner.test.ts  runtimeContext.test.tsx  settingsApplyPatch.test.ts  skills.test.ts  toolRegistry.test.ts
__tests__/assistant/: HaruFloatingAgent.drag.test.tsx  HaruFloatingAgent.workflow.test.tsx  bridge.test.ts  frequency.test.ts  stateMachine.test.ts
__tests__/auth/: AuthGate.test.tsx
android/: build.gradle  gradle.properties  link-assets-manifest.json  settings.gradle
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/pro_engine/: export.cpp  icc_lcms.cpp  jni_bridge.cpp  pipeline.cpp  pro_engine.h
backend/: .env.example  README.md  generate_test.py  package-lock.json  package.json
config/: siliconflow.ts
data/: agent-memory.json
docs/: ARCHITECTURE.md  HERO_ASSET_SPEC.md  OPEN_SOURCE_ASSETS.md  V0_PROJECT_BRIEF.md
ios/: Podfile
logs/: frontend-smoke-ui.xml  providers_index_full.txt  start-metro.ps1  voice_crash_logcat.txt  window_after_voice.xml  window_dump_picker.xml  window_voice_no_image.xml  window_voice_verify.xml  window_voice_with_image.xml
web/: .env.local.example  next.config.js  package-lock.json  package.json
(+421 files in other folders)
